<resources>
    <string name="app_name" translatable="false">AdventureApp</string>
    <string name="settings">Settings</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>


    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="photo_retrieved">Photo retrieved</string>
    <string name="camera_permission_granted">Camera Permission Granted</string>
    <string name="camera_permission_denied">Camera Permission Denied</string>
    <string name="photo_taken_successfully">Photo has been taken successfully!</string>
    <string name="error_taking_photo">Error taking photo: </string>
    <string name="error_saving_photo">Error saving photo: </string>
    <string name="photo_saved_successfully">Photo has been saved successfully!</string>

    <string name="adventure">Adventure</string>
    <string name="past_adventures">Past Adventures</string>
    <string name="start_adventure">Start Adventure</string>
    <string name="edit_adventure">Edit Adventure</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="finish_button">Finish</string>
    <string name="enter_adventure_name">Please enter adventure name</string>
    <string name="adventure_name">Adventure name</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="new_name">New Name</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up_prompt">Not a user? Sign up</string>
    <string name="sign_up_button">Sign up</string>
    <string name="already_user_prompt">Already a user? Log in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="error_occured">Error Occurred</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="please_enter_information">Please enter your information</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_task_photo">TaskPhotoActivity</string>
    <string name="delete_adventures_button">Delete adventures</string>
    <string name="find_mushrooms">Find mushrooms</string>
    <string name="find_river">Find a river</string>
    <string name="find_big_rock">Find a big rock</string>
    <string name="find_animal">Find an animal</string>
    <string name="find_windy_trail">Find a windy trail</string>
    <string name="find_tall_tree">Find a tall tree</string>
    <string name="find_bench">Find a bench</string>
    <string name="find_ystick">Find a Y-stick</string>
    <string name="find_bird">Find a bird</string>
    <string name="find_trail_marker">Find a trail marker</string>

</resources>